--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "description": "",
   "devDependencies": {
     "jest": "^30.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
+    "supertest": "^7.1.3"
   }
 }
